assets/scss/_styles_project.scss
/* ... */
#navsearch > #chatButtonTop {
  padding: 0.125rem 0.75rem;
  margin: 0px;
  margin-right: 1rem;
  height: 40px;
  background-color: black;
  color: white;
  min-width: 70px;
}

#navsearch > #appButton {
  padding: 0.125rem 0.75rem;
  margin: 0px;
  color: #282829;
}

#navsearch > #appButton a {
  color: #282829;
}

#navsearch > #appButton > span > span > i {
  color: #9c9ca4;
}

#navSearchBar {
  margin: 0px;
  min-width: 300px;
  max-width: 300px;
  width: 300px;
}

#scrollButton,
#chatButton {
  position: sticky;
  left: 100%;
  bottom: 1rem;
  border-radius: 0;
  height: 60px;
  width: 60px;
  opacity: 1;
  transition: opacity 0.5s;
  background-color: #fbfbfc;
  color: black;
}

#scrollButton > i,
#chatButton > i {
  color: black;
}

@keyframes wiggle {
  0% {
    transform: rotate(0deg);
  }
  80% {
    transform: rotate(0deg);
  }
  85% {
    transform: rotate(5deg);
  }
  95% {
    transform: rotate(-5deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

#chatButton {
  padding: 6px;
  width: 120px;
  animation: linear 2s wiggle 2s 2;
}

#chatButtonContent {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  i {
    color: white;
  }
}

#edit-on-github,
#rss-feed {
  float: right;
  a {
    color: #515151;
  }
}

/* scroll to top and github styling END */

/* cookie consent message START*/
.alert.cookieconsent-optout-marketing {
  border-color: #a51aff;
  display: block;
}

.embed-responsive.embed-responsive-16by9 {
  border: 1px solid #e4e4e6;
  border-radius: 4px;
}

img.embed-responsive.embed-responsive-16by9 {
  aspect-ratio: 16/9;
  padding: 2rem;
}
/* cookie consent message END */

/* GIFs should have a max width START */

.td-content > video {
  max-width: 100%;
}

.gif > video {
  max-width: 100%;
}

/* GIFs should have a max width END */

// Other styling

.table {
  margin-top: 1.5rem;
}

.td-content img {
  margin-bottom: 1rem;
}

img.frame {
  border: 1px solid #e4e4e6;
}

.td-content > video {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.embed-responsive.embed-responsive-16by9 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

/* Feedback container */

.feedback {
  padding-top: 2rem;
}

.feedback--prompt {
  display: flex;
  justify-content: center;
  align-items: baseline;
}

.feedback--question {
  display: inline;
  padding-right: 1em;
}

.feedback--answer {
  padding: 0.5rem 0.625rem;
  margin-right: 0.5rem;
}

.feedback--response {
  display: none;
  margin-top: 1em;
  border: 1px solid #e4e4e6;
  border-radius: 4px;
  padding: 1rem;
  max-width: 400px;
  margin: auto;
}

.feedback--answer {
  display: inline-block;
}

.feedback--response__visible {
  display: block;
}

.feedback-form {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.feedback-form > button {
  margin-left: 0.5rem;
}

.feedback-form > textarea {
  height: 133px;
  width: 100%;
}

.feedback-ty {
  text-align: center;
}

.feedback-ty > p {
  margin-top: 1rem;
}

// This ensures the gray sidebar covers the area where the sticky buttons are rendered.
@media (min-width: 768px) {
  .td-sidebar {
    // padding-bottom: 76px;
    margin-bottom: -76px;
  }
}

/* END Feedback container */

.glossary-anchor {
  color: black;

  svg {
    visibility: hidden;
  }
}

.glossary-anchor:hover {
  color: black;

  svg {
    color: #0000ea;
    visibility: initial;
  }
}

// Align media to left, center, or right

@media (min-width: 650px) {
  img.alignright {
    padding: 4px;
    margin: 0 0 2px 20px;
    display: inline;
  }
  img.alignleft {
    padding: 4px;
    margin: 0 20px 2px 0;
    display: inline;
  }
  video.alignright {
    padding: 4px;
    margin: 0 0 2px 20px;
    display: inline;
  }
  video.alignleft {
    padding: 4px;
    margin: 0 20px 2px 0;
    display: inline;
  }
  div.alignright {
    padding: 4px;
    margin: 0 0 2px 20px;
    display: inline;
  }
  div.alignleft {
    padding: 4px;
    margin: 0 20px 2px 0;
    display: inline;
  }
  .alignright {
    float: right;
  }
  .alignleft {
    float: left;
  }
  .aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

// center on small screens
@media (max-width: 650px) {
  .alignright {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
  .alignleft {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
  .aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
  .center-if-small {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

// Fix page width on full screen to be 90%

.td-content > .code-toolbar,
.td-content > .table,
.td-content > div,
.td-content > img,
.td-content > picture,
.td-content > picture > img {
  @include media-breakpoint-up(lg) {
    max-width: 90%;
  }

  max-width: 100%;
  max-height: 100%;
}

.gif {
  margin-bottom: 1rem;
}

.td-content > img.shadow,
.td-content * img.shadow {
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
}

@media (min-width: 992px) {
  .td-max-width-on-larger-screens,
  .td-content > pre,
  .td-content > .highlight,
  .td-content > .lead,
  .td-content > h1,
  .td-content > h2,
  .td-content > ul,
  .td-content > ol,
  .td-content > p,
  .td-content > blockquote,
  .td-content > dl dd,
  .td-content .footnotes,
  .td-content > .alert {
    max-width: 90%;
  }
}

// relatedcard styling

.relatedcard {
  display: flex;
  border-radius: 4px !important;
  margin: 0.25rem;
}

.relatedcard.green {
  background-color: #e6f7e6;
}

.relatedcard a {
  display: flex;
  text-decoration: none;
  padding: 0.5rem;
  text-align: left;
  min-width: 250px;
  max-width: 250px;
}

.relatedcard a picture {
  width: 40px;
  margin: 0 0.5rem;
  min-width: 40px;
  align-content: center;
}

.relatedcard a picture img {
  margin-bottom: unset;
}

.relatedcard a:hover {
  background-color: whitesmoke;
}

.relatedcard div {
  margin: auto;
}

.relatedcard p {
  align-content: center;
  margin-bottom: unset;
}
/* ... */

